--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -604,7 +604,6 @@
 
   .left-drawer {
     font-size: 1.2em;
-    overflow-y: scroll;
     height: 100vh;
 
     ul {
